--- a/style.css
+++ b/style.css
@@ -1,46 +1,20 @@
 body {
-  background-image: url("https://wallpapers-clan.com/wp-content/uploads/2024/11/chill-guy-background.jpg");
+  background-color: black;
   text-align: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed; 
-  margin-top: 10%;
+  color: white;
 }
 
-html{
-  height: 100%;
-  width: 100%;
-}
 
 #myCanvas {
+  background-image: url("https://images.pexels.com/photos/1387577/pexels-photo-1387577.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+  background-size: 400px;
   border-radius: 30px;
-  border: 15px double #8bbcbbff;
+  border: 1px solid rgb(255,245,227);
 }
 
-.container{
+.main{
   display: flex;
-  flex-wrap: wrap;
-  background-color: white;
-  justify-content: space-around;
-  align-items: flex-start;
-}
-
-.pic{
-  height: 400px;
-  width: 400px;
-  object-fit: cover;
-  border-radius: 30px;
-  border: 15px double #8bbcbbff;
-}
-
-h2{
-  color: black;
-}
-
-#start{
   text-align: left;
+  justify-content: space-around;
 }
 
-#end{
-  text-align: right;
-}
