--- a/style.css
+++ b/style.css
@@ -1,20 +1,46 @@
 body {
-  background-color: black;
+  background-image: url("https://wallpapers-clan.com/wp-content/uploads/2024/11/chill-guy-background.jpg");
   text-align: center;
-  color: white;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  margin-top: 10%;
 }
 
+html{
+  height: 100%;
+  width: 100%;
+}
 
 #myCanvas {
-  background-image: url("https://images.pexels.com/photos/1387577/pexels-photo-1387577.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-  background-size: 400px;
   border-radius: 30px;
-  border: 1px solid rgb(255,245,227);
+  border: 15px double #8bbcbbff;
 }
 
-.main{
+.container{
   display: flex;
-  text-align: left;
+  flex-wrap: wrap;
+  background-color: white;
   justify-content: space-around;
+  align-items: flex-start;
 }
 
+.pic{
+  height: 400px;
+  width: 400px;
+  object-fit: cover;
+  border-radius: 30px;
+  border: 15px double #8bbcbbff;
+}
+
+h2{
+  color: black;
+}
+
+#start{
+  text-align: left;
+}
+
+#end{
+  text-align: right;
+}
